# stm32h7-rs-skeleton

./: Cargo.toml  README.md  memory.x  openocd.gdb
.cargo/: config
src/: main.rs
src/utilities/: logger.rs
